--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "typescript": "5.1.5"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
