login with magic implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/api/auth/[...nextauth].js",
+    "process.d.ts",
+    "next-auth.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
