--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^2.0.0",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -16,9 +17,14 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.22",
-    "magic-sdk": "^18.4.1",
+    "graphql": "^16.7.1",
+    "graphql-request": "^6.1.0",
+    "hasura-cli": "^2.30.0",
+    "jsonwebtoken": "^9.0.1",
+    "magic-sdk": "^18.5.0",
     "next": "13.4.7",
     "next-auth": "^4.22.3",
+    "next-auth-hasura-adapter": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
@@ -26,6 +32,11 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.0"
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.16.2",
+    "@types/react": "^18.2.0",
+    "@types/react-modal": "^3.16.0",
+    "typescript": "^5.0.4"
   }
 }
